[gd_scene load_steps=16 format=3 uid="uid://dtuvq7yoyb157"]

[ext_resource type="Texture2D" uid="uid://c2qyur6t1oxfo" path="res://assets/sprite/kyoko/idle/kyoko_idle_0001.png" id="1_1gpph"]
[ext_resource type="Texture2D" uid="uid://darir4qeh2cxs" path="res://assets/sprite/kyoko/damage/kyoko_damage_0001.png" id="1_kebn7"]
[ext_resource type="Script" uid="uid://c83gwvthv4w5i" path="res://src/kyoko/kyoko.gd" id="1_unwkf"]
[ext_resource type="Texture2D" uid="uid://dofrgssgi8vif" path="res://assets/sprite/kyoko/idle/kyoko_idle_0002.png" id="2_t421v"]
[ext_resource type="Texture2D" uid="uid://hfsf4gdxd75p" path="res://assets/sprite/kyoko/shoot/kyoko_shoot_0001.png" id="4_ye273"]
[ext_resource type="Texture2D" uid="uid://ct5rnypunciso" path="res://assets/sprite/kyoko/shoot/kyoko_shoot_0002.png" id="5_8nx5u"]
[ext_resource type="Texture2D" uid="uid://5311a8vdqnf6" path="res://assets/sprite/kyoko/special/kyoko_special_0001.png" id="6_w3avh"]
[ext_resource type="AudioStream" uid="uid://yn3585ok4yf2" path="res://assets/sounds/KyokoHit.wav" id="8_t2etk"]
[ext_resource type="AudioStream" uid="uid://bpwvepipoysri" path="res://assets/sounds/SpecialRecharge.wav" id="9_8rjal"]
[ext_resource type="AudioStream" uid="uid://52g26ovouuc8" path="res://assets/sounds/SpecialShoot.wav" id="10_1t4g8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w025l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kebn7")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1gpph")
}, {
"duration": 1.0,
"texture": ExtResource("2_t421v")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ye273")
}, {
"duration": 1.0,
"texture": ExtResource("5_8nx5u")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_w3avh")
}],
"loop": true,
"name": &"special",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc72o"]
size = Vector2(41, 194)

[sub_resource type="Animation" id="Animation_35ogd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dtnd3"]
resource_name = "damage"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("s:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_njph2"]
_data = {
&"RESET": SubResource("Animation_35ogd"),
&"damage": SubResource("Animation_dtnd3")
}

[node name="kyoko" type="CharacterBody2D" groups=["player"]]
visibility_layer = 2
script = ExtResource("1_unwkf")

[node name="s" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_w025l")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, 10)
shape = SubResource("RectangleShape2D_tc72o")

[node name="shoot" type="Marker2D" parent="."]
position = Vector2(98, -27)

[node name="damageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_t2etk")
bus = &"sounds"

[node name="damageanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_njph2")
}

[node name="ShootFreeze" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DamageFreeze" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Death" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="disableTripleShoot" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SpecialShoot" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="special_recharge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8rjal")
bus = &"sounds"

[node name="special_shoot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_1t4g8")
bus = &"sounds"

[connection signal="timeout" from="ShootFreeze" to="." method="_on_shoot_freeze_timeout"]
[connection signal="timeout" from="DamageFreeze" to="." method="_on_damage_freeze_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
[connection signal="timeout" from="disableTripleShoot" to="." method="_on_disable_triple_shoot_timeout"]
[connection signal="timeout" from="SpecialShoot" to="." method="_on_special_shoot_timeout"]
